--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,6 +5,11 @@
 	id="WebApp_ID" version="2.5">
 	<display-name>easyclinica</display-name>
 
+	<context-param>
+		<param-name>br.com.caelum.vraptor.provider</param-name>
+		<param-value>br.com.easyclinica.infra.vraptor.providers.CustomProvider</param-value>
+	</context-param>
+	
 	<filter>
 		<filter-name>vraptor</filter-name>
 		<filter-class>br.com.caelum.vraptor.VRaptor</filter-class>
