--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -4,7 +4,8 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	id="WebApp_ID" version="2.5">
 	<display-name>easyclinica</display-name>
-
+	
+	<!-- VRaptor 3 -->
 	<context-param>
 		<param-name>br.com.caelum.vraptor.provider</param-name>
 		<param-value>br.com.easyclinica.infra.vraptor.providers.CustomProvider</param-value>
@@ -21,4 +22,16 @@
 		<dispatcher>FORWARD</dispatcher>
 		<dispatcher>REQUEST</dispatcher>
 	</filter-mapping>
+	
+	<!-- View JSP -->
+	<jsp-config>  
+	     <jsp-property-group>
+			<url-pattern>*.jsp</url-pattern>
+			<page-encoding>UTF-8</page-encoding>
+			<scripting-invalid>true</scripting-invalid>
+			<include-prelude>../shared/header.jsp</include-prelude>
+			<include-coda>../shared/footer.jsp</include-coda> 
+		</jsp-property-group> 
+	</jsp-config>
+	
 </web-app>
