--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -10,6 +10,17 @@
 		<param-value>messages</param-value>
 	</context-param>
 	
+	<!-- SiteMesh -->
+    <filter>
+        <filter-name>sitemesh</filter-name>
+        <filter-class>com.opensymphony.module.sitemesh.filter.PageFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>sitemesh</filter-name>
+        <url-pattern>*</url-pattern>
+    </filter-mapping>
+   	
 	<!-- VRaptor 3 -->
 	<context-param>
 	    <param-name>br.com.caelum.vraptor.packages</param-name>
@@ -30,16 +41,5 @@
 		<dispatcher>FORWARD</dispatcher>
 		<dispatcher>REQUEST</dispatcher>
 	</filter-mapping>
-	
-	<!-- View JSP -->
-	<jsp-config>  
-	     <jsp-property-group>
-			<url-pattern>*.jsp</url-pattern>
-			<page-encoding>UTF-8</page-encoding>
-			<scripting-invalid>true</scripting-invalid>
-			<include-prelude>../shared/header.jsp</include-prelude>
-			<include-coda>../shared/footer.jsp</include-coda> 
-		</jsp-property-group> 
-	</jsp-config>
 	
 </web-app>
