--- a/migrations/migrate4j.properties
+++ b/migrations/migrate4j.properties
@@ -1,4 +1,4 @@
-connection.url=jdbc:mysql://localhost:3306/easyclinicatest
+connection.url=jdbc:mysql://localhost:3306/easyclinica
 connection.driver=com.mysql.jdbc.Driver
 connection.username=root
 connection.password=root
