Deletando toda regra de servicos e materiais

--- a/migrations/migrate4j.properties
+++ b/migrations/migrate4j.properties
@@ -1,6 +1,6 @@
 connection.url=jdbc:mysql://localhost:3306/easyclinica
 connection.driver=com.mysql.jdbc.Driver
-connection.username=root
-connection.password=root
+connection.username=easyclinica
+connection.password=3@sycl1n1c@
 
 migration.package.name=br.com.easyclinica.migrations
