--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -25,7 +25,7 @@
 	<context-param>
 	    <param-name>br.com.caelum.vraptor.packages</param-name>
 	    <param-value> 
-	    	br.com.caelum.vraptor.util.jpa,
+	    	br.com.caelum.vraptor.util.hibernate,
 	        br.com.caelum.vraptor.http.iogi
 	    </param-value>
 	</context-param>
