--- a/ivy.xml
+++ b/ivy.xml
@@ -8,6 +8,7 @@
 
 	<dependencies>
 		<dependency org="br.com.caelum" name="vraptor" rev="3.3.1" conf="default" />
+		<dependency org="com.thoughtworks.xstream" name="xstream" rev="1.3.1"/>
 		<dependency org="mysql" name="mysql-connector-java" rev="5.1.13"/>
 		<dependency org="opensymphony" name="sitemesh" rev="2.4.2" conf="default" />
 		
