ant agora builda, testa, testa integracao, compila relatorios e fecha war

--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,23 @@
 project.name=easyclinica
 
-lib.dir=WebContent/WEB-INF/lib
+# diretorio de saida do war e dos testes
+output.dir=target
+test.build.dir=target/test-classes
+integrationtest.build.dir=target/integration-test-classes
 
+# diretorio de reports
+reports.dir=./reports
+reports.dest.dir=./WebContent/WEB-INF/reports
+reports.tmp.dir=./target/temp
+
+# diretorio de libs, build e src
+webapp.dir=WebContent/
+lib.dir=WebContent/WEB-INF/lib
+build.dir=WebContent/WEB-INF/classes
+src.dir=src/
+test.src.dir=tests/
+integrationtest.src.dir=integration-tests/
+
+# ivy config
 ivy.jar.file=ivy-2.2.0.jar
 lib.unresolved=unresolved
