--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<project name="easyclinica" default="resolve" xmlns:ivy="antlib:org.apache.ivy.ant">
+<project name="easyclinica" default="war" xmlns:ivy="antlib:org.apache.ivy.ant">
 
 	<property file="build.properties" />
 
