--- a/src/easyclinica-production.properties
+++ b/src/easyclinica-production.properties
@@ -1,7 +1,7 @@
 elements_per_page = 10
 
 # database info
-connection_string = jdbc:mysql://localhost:3306/#database#?useUnicode=true&characterEncoding=UTF-8
-driver_class = com.mysql.jdbc.Driver
+connection_string = jdbc:cloudbees://#database#
+driver_class = com.cloudbees.jdbc.Driver
 db_pwd = 3@sycl1n1c@
-db_prefix = 
+db_prefix = ec
