--- a/build.xml
+++ b/build.xml
@@ -52,7 +52,7 @@
 		<taskdef resource="org/apache/ivy/ant/antlib.xml" uri="antlib:org.apache.ivy.ant" classpathref="ivy.lib.path" />
 
 		<delete dir="${lib.dir}" includes="**/*.*" />
-		<ivy:retrieve pattern="WebContent/WEB-INF/lib/[artifact]-[revision](-[classifier]).[ext]" sync="true" />
+		<ivy:retrieve pattern="WebContent/WEB-INF/lib/[artifact](-[classifier]).[ext]" sync="true" />
 
 		<copy todir="${lib.dir}">
 			<fileset dir="${lib.unresolved}">
