--- a/ivy.xml
+++ b/ivy.xml
@@ -27,7 +27,7 @@
 		
 		<dependency org="org.apache.poi" name="poi" rev="3.7" conf="default" />
 		
-		<dependency org="net.sf.ehcache" name="ehcache" rev="2.4.1" conf="default"/>
+		<!--  dependency org="net.sf.ehcache" name="ehcache-core" rev="2.4.1"/ -->
 		
 		<!-- Test dependencies -->
 		<dependency org="junit" name="junit" rev="4.8.2" conf="test->default" />
