--- a/ivy.xml
+++ b/ivy.xml
@@ -17,15 +17,19 @@
 		<dependency org="commons-fileupload" name="commons-fileupload" rev="1.2.1"/>
 		
 		<dependency org="org.hamcrest" name="hamcrest-all" rev="1.1" conf="default" />
-		<dependency org="org.hibernate" name="hibernate-core" rev="3.3.2.GA" conf="default" />
-		<dependency org="org.hibernate" name="hibernate-annotations" rev="3.4.0.GA" conf="default" />
+		<dependency org="org.hibernate" name="hibernate-core" rev="3.6.3.Final" conf="default" />
+		<dependency org="org.hibernate" name="hibernate-c3p0" rev="3.6.3.Final" conf="default" />
+		<dependency org="org.hibernate" name="hibernate-ehcache" rev="3.6.3.Final" conf="default" />
 		<dependency org="org.hibernate.javax.persistence" name="hibernate-jpa-2.0-api" rev="1.0.0.Final" conf="default" />
+		
 		<dependency org="c3p0" name="c3p0" rev="0.9.1" conf="default" />
 		
 		<dependency org="org.codehaus.groovy" name="groovy-all-minimal" rev="1.5.8" conf="default"/>
 		<dependency org="net.sf.jasperreports" name="jasperreports" rev="4.0.0" conf="default" />
 		
 		<dependency org="org.apache.poi" name="poi" rev="3.7" conf="default" />
+		
+		<dependency org="net.sf.ehcache" name="ehcache-core" rev="2.4.1"/>
 		
 		<!-- Test dependencies -->
 		<dependency org="junit" name="junit" rev="4.8.2" conf="test->default" />
