gerando o war corretamente

--- a/build.properties
+++ b/build.properties
@@ -5,6 +5,9 @@ output.dir=target
 test.build.dir=target/test-classes
 integrationtest.build.dir=target/integration-test-classes
 
+# resources
+resources.dir =  resources/
+
 # diretorio de reports
 reports.dir=./reports
 reports.dest.dir=./WebContent/WEB-INF/reports
