--- a/src/main/resources/easyclinica-production.properties
+++ b/src/main/resources/easyclinica-production.properties
@@ -4,4 +4,4 @@ elements_per_page = 10
 connection_string = jdbc:cloudbees://#database#
 driver_class = com.cloudbees.jdbc.Driver
 db_pwd = 3@sycl1n1c@
-db_prefix = ec
+db_prefix = ec-
