--- a/build.xml
+++ b/build.xml
@@ -61,7 +61,13 @@
 		<delete file="${build.dir}/log4j.xml" />
 		<move file="${build.dir}/log4j-production.xml" toFile="${build.dir}/log4j.xml"/>
 	</target>
-	
+
+	<target name="only-war" description="--> generate war file" depends="resolve, reports, config">			
+		<war destfile="${output.dir}/${project.name}.war">
+			<zipfileset dir="${webapp.dir}" />
+		</war>
+	</target>
+		
 	<target name="war" description="--> generate war file" depends="test, reports, config">			
 		<war destfile="${output.dir}/${project.name}.war">
 			<zipfileset dir="${webapp.dir}" />
@@ -79,7 +85,9 @@
 		<mkdir dir="${output.dir}/test-results" />
 		<junit haltonfailure="yes">
 			<batchtest fork="yes" todir="${output.dir}/test-results">
-				<fileset dir="${test.build.dir}" includes="*Test*" />
+				<fileset dir="${test.src.dir}">
+					<include name="**/*Test*.java"/>
+				</fileset>
 			</batchtest>
 			<formatter type="brief" usefile="false" />
 			<formatter type="xml" />
