--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,7 @@
 <project name="easyclinica" default="war" xmlns:ivy="antlib:org.apache.ivy.ant">
 
 	<property file="build.properties" />
+	<property name="ivy.file" value="ivysettings.xml" />
 
 	<!-- paths -->
 	<path id="lib.path.id">
@@ -33,6 +34,7 @@
 		<taskdef resource="org/apache/ivy/ant/antlib.xml" uri="antlib:org.apache.ivy.ant" classpathref="ivy.lib.path" />
 
 		<delete dir="${lib.dir}" includes="**/*.*" />
+		<ivy:settings file="${ivy.file}" />
 		<ivy:retrieve pattern="WebContent/WEB-INF/lib/[artifact](-[classifier]).[ext]" sync="true" />
 
 		<copy todir="${lib.dir}">
