um monte de coisa; mas os testes de aceitacao ainda nao passam

--- a/src/main/resources/easyclinica-production.properties
+++ b/src/main/resources/easyclinica-production.properties
@@ -6,3 +6,4 @@ connection_string = jdbc:cloudbees://#database#
 driver_class = com.cloudbees.jdbc.Driver
 db_pwd = 3@sycl1n1c@
 db_prefix = ec-
+dialect = org.hibernate.dialect.MySQLInnoDBDialect
