chat comecando a funcionar

--- a/src/main/resources/easyclinica.properties
+++ b/src/main/resources/easyclinica.properties
@@ -7,3 +7,5 @@ driver_class = com.mysql.jdbc.Driver
 db_pwd = 3@sycl1n1c@
 db_prefix = 
 dialect = org.hibernate.dialect.MySQLInnoDBDialect
+
+max_logged_time = 20
