--- a/src/main/resources/easyclinica-production.properties
+++ b/src/main/resources/easyclinica-production.properties
@@ -9,3 +9,6 @@ db_prefix = ec-
 dialect = org.hibernate.dialect.MySQLInnoDBDialect
 
 max_logged_time = 20
+
+from_email = clinicadavila@gmail.com
+error_email = mauricioaniche@gmail.com;muriloamendola@gmail.com
