--- a/ivy.xml
+++ b/ivy.xml
@@ -33,6 +33,11 @@
 		
 		<dependency org="javax.mail" name="mail" rev="1.4.1"/>
 		
+		<dependency org="joda-time" name="joda-time" rev="1.6.2" conf="default" />
+        <dependency org="joda-time" name="joda-time-hibernate" rev="1.2" conf="default">
+        	<exclude module="hibernate"/>
+        </dependency>
+		
 		<!-- Test dependencies -->
 		<dependency org="junit" name="junit" rev="4.8.2" conf="test->default" />
 		<dependency org="org.mockito" name="mockito-all" rev="1.8.5" conf="test->default" />
