modificando senha de producao

--- a/src/main/resources/easyclinica-production.properties
+++ b/src/main/resources/easyclinica-production.properties
@@ -4,7 +4,7 @@ elements_per_page = 10
 # database info
 connection_string = jdbc:cloudbees://#database#
 driver_class = com.cloudbees.jdbc.Driver
-db_pwd = 3@sycl1n1c@
+db_pwd = 3@sycl1n1c@_rtf
 db_prefix = ec-
 dialect = org.hibernate.dialect.MySQLInnoDBDialect
 
