--- a/ivy.xml
+++ b/ivy.xml
@@ -7,6 +7,8 @@
 	</configurations>
 
 	<dependencies>
+		<dependency org="org.slf4j" name="api" rev="1.5.5" />
+	
 		<dependency org="br.com.caelum" name="vraptor" rev="3.3.1" conf="default" />
 		<dependency org="com.thoughtworks.xstream" name="xstream" rev="1.3.1"/>
 		<dependency org="mysql" name="mysql-connector-java" rev="5.1.13"/>
