--- a/src/main/resources/easyclinica-production.properties
+++ b/src/main/resources/easyclinica-production.properties
@@ -2,8 +2,8 @@ env=production
 elements_per_page = 10
 
 # database info
-connection_string = jdbc:cloudbees://#database#
-driver_class = com.cloudbees.jdbc.Driver
+connection_string = jdbc:mysql://localhost:3306/#database#?useUnicode=true&characterEncoding=UTF-8
+driver_class = com.mysql.jdbc.Driver
 db_pwd = 3@sycl1n1c@_rtf
 db_prefix = ec-
 dialect = org.hibernate.dialect.MySQLInnoDBDialect
