configs de producao

--- a/src/main/resources/easyclinica-production.properties
+++ b/src/main/resources/easyclinica-production.properties
@@ -5,10 +5,10 @@ elements_per_page = 10
 connection_string = jdbc:mysql://localhost:3306/#database#?useUnicode=true&characterEncoding=UTF-8
 driver_class = com.mysql.jdbc.Driver
 db_pwd = 3@sycl1n1c@_rtf
-db_prefix = ec-
+db_prefix =
 dialect = org.hibernate.dialect.MySQLInnoDBDialect
 
 max_logged_time = 20
 
 from_email = clinicadavila@gmail.com
-error_email = mauricioaniche@gmail.com;muriloamendola@gmail.com
+error_email = mauricio@easyclinica.com.br;murilo@easyclinica.com.br
