--- a/src/main/resources/easyclinica.properties
+++ b/src/main/resources/easyclinica.properties
@@ -6,7 +6,7 @@ connection_string = jdbc:mysql://localhost:3306/#database#?useUnicode=true&chara
 driver_class = com.mysql.jdbc.Driver
 db_pwd = 3@sycl1n1c@
 db_prefix = 
-dialect = org.hibernate.dialect.MySQLInnoDBDialect
+dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 max_logged_time = 20
 
