--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Wed Apr 27 17:02:00 BRT 2011
+#Wed Sep 07 22:47:04 BRT 2011
 eclipse.preferences.version=1
 encoding//WebContent/javascripts/easyclinica.js=UTF-8
+encoding//WebContent/modal/_confirmacao-consulta.html=UTF-8
