--- a/build.xml
+++ b/build.xml
@@ -64,7 +64,7 @@
 		<move file="${build.dir}/log4j-production.xml" toFile="${build.dir}/log4j.xml"/>
 	</target>
 
-	<target name="only-war" description="--> generate war file" depends="resolve, reports, config">			
+	<target name="only-war" description="--> generate war file" depends="resolve, compile, reports, config">			
 		<war destfile="${output.dir}/${project.name}.war">
 			<zipfileset dir="${webapp.dir}" />
 		</war>
