minificando js e colocando js no final do arquivo

--- a/build.properties
+++ b/build.properties
@@ -12,8 +12,9 @@ reports.tmp.dir=./target/temp
 
 # diretorio de libs, build e src
 webapp.dir=WebContent/
-lib.dir=WebContent/WEB-INF/lib
-build.dir=WebContent/WEB-INF/classes
+lib.dir=${webapp.dir}/WEB-INF/lib
+build.dir=${webapp.dir}/WEB-INF/classes
+
 src.dir=src/main/java
 resources.dir = src/main/resources/
 test.src.dir=src/test/java
