--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
-#Wed Sep 07 22:47:04 BRT 2011
+#Sun Sep 11 15:17:41 BRT 2011
 eclipse.preferences.version=1
 encoding//WebContent/javascripts/easyclinica.js=UTF-8
 encoding//WebContent/modal/_confirmacao-consulta.html=UTF-8
+encoding/<project>=UTF-8
